--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/coding.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -41,3 +41,5 @@
     -->
   </body>
 </html>
+
+<a href="https://www.flaticon.com/free-icons/computer" title="computer icons" style="visibility: hidden">Computer icons created by Aranagraphics - Flaticon</a>
