add email and number to contact section and minor style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,6 @@
   </body>
 </html>
 
-<a href="https://www.flaticon.com/free-icons/computer" title="computer icons" style="visibility: hidden">Computer icons created by Aranagraphics - Flaticon</a>
+<!-- <a href="https://www.flaticon.com/free-icons/computer" title="computer icons">Computer icons created by Aranagraphics - Flaticon</a> -->
+<!-- <a href="https://www.flaticon.com/free-icons/mail" title="mail icons">Mail icons created by Smashicons - Flaticon</a> -->
+<!-- <a href="https://www.flaticon.com/free-icons/smartphone" title="smartphone icons">Smartphone icons created by Freepik - Flaticon</a> -->
