update skills and add experiences

--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,6 @@
 </html>
 
 <!-- <a href="https://www.flaticon.com/free-icons/computer" title="computer icons">Computer icons created by Aranagraphics - Flaticon</a> -->
-<!-- <a href="https://www.flaticon.com/free-icons/mail" title="mail icons">Mail icons created by Smashicons - Flaticon</a> -->
+<!-- <a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Freepik - Flaticon</a> -->
 <!-- <a href="https://www.flaticon.com/free-icons/smartphone" title="smartphone icons">Smartphone icons created by Freepik - Flaticon</a> -->
+<!-- <a href="https://www.flaticon.com/free-icons/sql" title="sql icons">Sql icons created by Smashicons - Flaticon</a> -->
